--- a/Public/assets/css/whocares.css
+++ b/Public/assets/css/whocares.css
@@ -27,10 +27,15 @@ h2{
     font-style: italic;
     letter-spacing: 6px;
     font-weight: bold !important;
-    margin-top: 2%;
+    margin-top: 1%;
 }
 
 .card{
     border: 2px solid #23b5d3;
     box-shadow: 5px 5px 10px #75abbc;
 }
+ul{
+    border: 2px solid #23b5d3;
+    box-shadow: 5px 5px 10px #75abbc;
+}
+
