--- a/Public/views/posts.html
+++ b/Public/views/posts.html
@@ -1,4 +1,4 @@
-<div class="card" ng-repeat ="post in posts">
+<div class="card" ng-repeat ="post in posts" ng-click="count = 0">
     <div class="card-body">
       <img src="{{post.filename}}">
       <h5 class="card-title">{{post.name}}</h5>
@@ -7,7 +7,7 @@
       <div ng-click="count=0">
         <button  ng-mouseover="count = count + 1" ng-click="count = 0"> -_- </button>
         <div ng-if="count > 0 ">
-          <button ng-click="count = 0" class="btn btn-{{emoticon.color}} rounded-circle mb-3" ng-repeat="emoticon in emoticons"><i class="{{emoticon.class}}"></i></button>
+          <button  class="btn btn-{{emoticon.color}} rounded-circle mb-3" ng-repeat="emoticon in emoticons"><i class="{{emoticon.class}}"></i></button>
         </div>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop"> Komment </button>
       </div>
