--- a/Public/views/login.html
+++ b/Public/views/login.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+<div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4" ng-controller="userCtrl">
     <h3 class="mt-3">Login to Stepcounter App</h3>
     <hr>
 
