--- a/Public/views/login.html
+++ b/Public/views/login.html
@@ -1,8 +1,8 @@
-<div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4" ng-controller="userCtrl">
+<div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
     <h3 class="mt-3">Login to Stepcounter App</h3>
     <hr>
 
-        <form action="/users/login" method="post">
+        <form>
             <div class="mb-3">
                 <label for="usermail" class="form-label">E-mail address</label>
                 <input type="email" class="form-control" name="usermail">
@@ -11,7 +11,7 @@
                 <label for="userpass" class="form-label">Password</label>
                 <input type="password" class="form-control" name="userpass">
             </div>
-            <button type="submit" class="btn btn-primary mb-3">Login</button>
-            <a href="/Public/registration.html" class="btn btn-secondary mb-3">Registration</a>
+            <button  ng-click="login()" class="btn btn-primary mb-3">Login</button>
+            <a href="#!/reg" class="btn btn-secondary mb-3">Registration</a>
         </form>
 </div>
