--- a/Public/views/posts.html
+++ b/Public/views/posts.html
@@ -1,4 +1,6 @@
-<div class="card" ng-repeat ="post in posts" ng-click="count = 0">
+<div class="col-8">
+  <!-- postok helye-->
+  <div class="card" ng-repeat ="post in posts" ng-click="count = 0">
     <div class="card-body">
       <img src="{{post.filename}}">
       <h5 class="card-title">{{post.name}}</h5>
@@ -32,3 +34,18 @@
     </div>
     </div>
   </div>
+  <!--'posts.html'-->
+</div>
+<div class="col-4 embik">
+<!-- Felhasznalok helye-->
+<ul class="list-group list-group-flush" >
+    <li class="list-group-item" ng-repeat="user in users">
+        <img src="../Public/uploads/nopic.png" ng-if="user.filename == '' ">
+        <img src="../Public/uploads/{{ user.filename}}" ng-if="user.filename != ''">
+        {{user.name}}
+    </li>
+    
+</ul>
+</div>
+
+
