--- a/Public/views/registration.html
+++ b/Public/views/registration.html
@@ -20,6 +20,6 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary mb-3">Registration</button>
-                <a href="/" class="btn btn-secondary mb-3">Back to login</a>
+                <a href="#!/" class="btn btn-secondary mb-3">Back to login</a>
             </form>
     </div>
