--- a/Public/views/login.html
+++ b/Public/views/login.html
@@ -1,17 +1,17 @@
 <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-    <h3 class="mt-3">Login to Stepcounter App</h3>
+    <h3 class="mt-3"> Bejelentkezés </h3>
     <hr>
 
         <form>
             <div class="mb-3">
-                <label for="usermail" class="form-label">E-mail address</label>
+                <label for="usermail" class="form-label">E-mail cím</label>
                 <input type="email" class="form-control" name="usermail">
             </div>
             <div class="mb-3">
-                <label for="userpass" class="form-label">Password</label>
+                <label for="userpass" class="form-label">Jelszó</label>
                 <input type="password" class="form-control" name="userpass">
             </div>
-            <button  ng-click="login()" class="btn btn-primary mb-3">Login</button>
-            <a href="#!/reg" class="btn btn-secondary mb-3">Registration</a>
+            <button  ng-click="login()" class="btn btn-primary mb-3 kek">Bejelentkezés</button>
+            <a href="#!/reg" class="btn btn-secondary mb-3 szurke">Még nincs felhasználód(ne is legyen)</a>
         </form>
 </div>
