--- a/Public/views/registration.html
+++ b/Public/views/registration.html
@@ -1,25 +1,25 @@
     <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-        <h3 class="mt-3">User registration</h3>
+        <h3 class="mt-3">Regisztráció</h3>
         <hr>
-            <form action="/users/reg" method="post">
+            <form>
                 <div class="mb-3">
-                    <label for="username" class="form-label">Name</label>
+                    <label for="username" class="form-label">Név</label>
                     <input type="text" class="form-control" name="username">
                 </div>
                 <div class="mb-3">
-                    <label for="usermail" class="form-label">E-mail address</label>
+                    <label for="usermail" class="form-label">E-mail cím</label>
                     <input type="email" class="form-control" name="usermail">
                 </div>
                 <div class="mb-3">
-                    <label for="userpass1" class="form-label">Password</label>
+                    <label for="userpass1" class="form-label">Jelszó</label>
                     <input type="password" class="form-control" name="userpass1">
                 </div>
                 <div class="mb-3">
-                    <label for="userpass2" class="form-label">Password again</label>
+                    <label for="userpass2" class="form-label">Jelszó újra</label>
                     <input type="password" class="form-control" name="userpass2">
                 </div>
 
-                <button type="submit" class="btn btn-primary mb-3">Registration</button>
-                <a href="#!/" class="btn btn-secondary mb-3">Back to login</a>
+                <button type="submit" class="btn btn-primary mb-3 kek">Regisztráció</button>
+                <a href="#!/" class="btn btn-secondary mb-3 szurke">Vissza a Bejelentkezéshez</a>
             </form>
     </div>
