--- a/Public/views/posts.html
+++ b/Public/views/posts.html
@@ -1,3 +1,4 @@
+<div class="d-flex">
 <div class="col-8">
   <!-- postok helye-->
   <div class="card" ng-repeat ="post in posts" ng-click="count = 0">
@@ -36,6 +37,7 @@
   </div>
   <!--'posts.html'-->
 </div>
+
 <div class="col-4 embik">
 <!-- Felhasznalok helye-->
 <ul class="list-group list-group-flush" >
@@ -47,5 +49,5 @@
     
 </ul>
 </div>
-
+</div>
 
