--- a/Public/assets/css/whocares.css
+++ b/Public/assets/css/whocares.css
@@ -34,6 +34,7 @@ h2{
 .card{
     border: 2px solid #23b5d3;
     box-shadow: 5px 5px 10px #75abbc;
+    margin-bottom: 1%;
 }
 ul{
     border: 2px solid #23b5d3;
