--- a/Public/views/login.html
+++ b/Public/views/login.html
@@ -1,5 +1,5 @@
 <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-    <h3 class="mt-3"> Bejelentkezés </h3>
+    <h3> Bejelentkezés </h3>
     <hr>
 
         <form>
