--- a/Public/views/registration.html
+++ b/Public/views/registration.html
@@ -1,5 +1,5 @@
     <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-        <h3 class="mt-3">Regisztráció</h3>
+        <h3>Regisztráció</h3>
         <hr>
             <form>
                 <div class="mb-3">
