kis css kis ezaz

--- a/Public/views/registration.html
+++ b/Public/views/registration.html
@@ -19,7 +19,7 @@
                     <input type="password" class="form-control" name="userpass2">
                 </div>
 
-                <button type="submit" class="btn btn-primary mb-3 kek">Regisztráció</button>
+                <button ng-click="registration()" class="btn btn-primary mb-3 kek">Regisztráció</button>
                 <a href="#!/" class="btn btn-secondary mb-3 szurke">Vissza a Bejelentkezéshez</a>
             </form>
     </div>
