--- a/Public/views/login.html
+++ b/Public/views/login.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+<div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4 szepseg" >
     <h3> Bejelentkezés </h3>
     <hr>
 
