--- a/Public/views/posts.html
+++ b/Public/views/posts.html
@@ -26,15 +26,15 @@
   </div>
 </div>
   <!-- postok helye-->
-  <div class="card" ng-repeat ="post in posts" ng-click="count = 0">
+  <div class="card" ng-repeat ="post in posts">
     <div class="card-body">
       <img src="{{post.filename}}">
       <h5 class="card-title">{{post.name}}</h5>
       <h6 class="card-subtitle mb-2 text-muted">{{post.date}}</h6>
       <p class="card-text"> {{post.postmessage}}</p>
-      <div ng-click="count=0">
-        <button  ng-mouseover="count = count + 1" ng-click="count = 0" class="btn btn-primary kek"> -_- </button>
-        <div ng-if="count > 0 ">
+      <div>
+    
+        <div>
           <button  ng-click="reakcio(emoticon.ID)" class="btn btn-outline-{{emoticon.color}} rounded-circle mb-3" ng-repeat="emoticon in emoticons"><i class="{{emoticon.class}}"></i></button>
         </div>
         <button class="btn btn-primary szurke" data-bs-toggle="modal" data-bs-target="#staticBackdrop"> Komment </button>
