--- a/Public/views/posts.html
+++ b/Public/views/posts.html
@@ -37,7 +37,7 @@
         <div ng-if="count > 0 ">
           <button  ng-click="reakcio(emoticon.ID)" class="btn btn-{{emoticon.color}} rounded-circle mb-3" ng-repeat="emoticon in emoticons"><i class="{{emoticon.class}}"></i></button>
         </div>
-        <button class="btn btn-primary szurke" data-bs-toggle="modal" data-bs-target="#staticBackdrop"> Komment </button>
+        <button class="btn btn-primary szurke" data-bs-toggle="modal" data-bs-target="#staticBackdrop" ng-click="kommentSelectPost(post.ID, $index)"> Komment </button>
       </div>
 
       <div class="accordion accordion-flush" id="accordionFlushExample" ng-if="post.comments.length > 0">
@@ -53,7 +53,8 @@
                 <h6>{{comment.name}}</h6>
               </div>
             <div> 
-              {{comment.date}}
+                {{comment.date}}
+              <br>
                 {{comment.comment}}
             </div>
           </div>
@@ -77,4 +78,7 @@
 </ul>
 </div>
 </div>
+
+<div ng-include="'modal.html'"></div>
+
 
