--- a/Public/views/posts.html
+++ b/Public/views/posts.html
@@ -3,13 +3,19 @@
 
 <div class="d-flex">
   
-<div class="col-8">
-  <div class="accordion accordion-flush" id="accordionFlushExample" >
+
+  <div class="col-8">
+
+
+  <div class="accordion accordion-flush " id="accordionFlushExample">
   <div class="accordion-item ">
-    <h2 class="accordion-header" id="flush-headingOne">
-      <button  class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#newpost" aria-expanded="false">
-        Post hozzáadása
-      </button>
+    <h2 class="accordion-header np" id="flush-headingOne">
+    
+        <button  class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#newpost" aria-expanded="false">
+          Post hozzáadása
+        </button>
+      
+   
     </h2>
     <div id="newpost" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
         <div>
