--- a/Public/views/posts.html
+++ b/Public/views/posts.html
@@ -41,7 +41,7 @@
       <p class="card-text"> {{post.postmessage}}</p>
       <div>
         <div>
-          <button id="reagalas{{post.ID}}{{$index+1}}" ng-click="reakcio(post.ID,emoticon.ID)" class="btn rounded-circle mb-3 btn-outline-{{emoticon.color}}" ng-repeat="emoticon in emoticons"><i class="{{emoticon.class}}"></i></button>
+          <button id="reagalas{{post.ID}}{{$index+1}}" ng-click="reakcio(post.ID,emoticon.ID)" class="btn rounded-circle mb-3 btn-outline-{{emoticon.color}}" ng-repeat="emoticon in post.emoticons"><i class="{{emoticon.class}}"></i>{{emoticon.counter}}</button>
         </div>
         <div class="d-flex justify-content-between">
           <button class="btn btn-primary szurke" data-bs-toggle="modal" data-bs-target="#staticBackdrop" ng-click="kommentSelectPost(post.ID, $index)"> Komment </button>
