--- a/Public/views/posts.html
+++ b/Public/views/posts.html
@@ -46,7 +46,7 @@
               <button class="btn rounded-circle btn-outline-{{emoticon.color}}" ng-if="!reagalt(emoticon.users)" ng-click="reagalas(emoticon, $parent.post.ID)" title="{{emoticon.name}}">
                 <i class="{{emoticon.class}}"></i>
               </button>
-              <button class="btn rounded-circle btn-{{emoticon.color}}" ng-if="reagalt(emoticon.users)" ng-click="levesz(emoticon, post.ID)" title="{{emoticon.name}}>
+              <button class="btn rounded-circle btn-{{emoticon.color}}" ng-if="reagalt(emoticon.users)" ng-click="levesz(emoticon, post.ID)" title="{{emoticon.name}}">
                 <i class="{{emoticon.class}}"></i>
               </button>
             </div>
@@ -92,9 +92,10 @@
 <div class="col-4 embik">
 <!-- Felhasznalok helye--> 
 <ul class="list-group list-group-flush" >
-    <li class="list-group-item" ng-repeat="user in users">
+    <li class="list-group-item d-flex justify-content-between" ng-repeat="user in users">
         <img class="profkep" src="/Public/assets/img/{{user.filename}}">
         {{user.name}}
+        <i class="bi bi-chat-dots" ng-click="choosePartner(user)"></i>
     </li>
     
 </ul>
